# Local-IPC-Broker-demo

./: CMakeLists.txt  README.md
analytics/: main.cpp
broker/: main.cpp
broker/include/: BrokerRuntime.hpp  MessageDispatcher.hpp  UnixSocketServer.hpp
broker/src/: BrokerRuntime.cpp  MessageDispatcher.cpp  UnixSocketServer.cpp  main.cpp
capture/: main.cpp
capture/src/: main.cpp
common/include/client/: BrokerClient.hpp  IBrokerClient.hpp
common/include/ipc/: SocketConfig.hpp  UnixSocketClient.hpp
common/include/messaging/: Message.hpp  MessageCodec.hpp  Topics.hpp
common/src/: BrokerClient.cpp  BrokerClient.hpp  MessageCodec.cpp  UnixSocketClient.cpp
docs/: message-format.md  message-sequence-diagram.puml  system-architecture.drawio
scripts/: init.sh  mock_cloud_server.py
uploader/: go.mod  main.go
